istio/require-authorizationpolicy/.chainsaw-test/chainsaw-step-01-apply-2.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: default-deny
  namespace: istio-reqauthzpol-good-ns
spec: {}
