istio/require-authorizationpolicy/.chainsaw-test/chainsaw-step-01-apply-3.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-reqauthzpol-bad-ns
