istio/require-authorizationpolicy/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-authorizationpolicies
status:
  ready: true
